--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-*.sql linguist-language=SQL
-*.bak linguist-vendored
-*.png linguist-vendored
+*.sql linguist-detectable=true
+*.sql linguist-language=sql
